# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  python-package.yml
brain_games/: cli.py  engine.py  game_engine.py
brain_games/games/: brain-calc.py  brain-even.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  engine.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-prime.py  brain-progression.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py
paul19_brain_games.egg-info/: PKG-INFO  SOURCES.txt
