[tool.poetry]
name = "paul19_brain_games"
version = "0.6.0"
description = "hexlet project lv1"
authors = ["Paul Kozlov <gg1779@gmail.com>"]
repository = "https://github.com/PaulG17/python-project-lvl1.git"

packages = [
  { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_even:main"
